[project]
name = "nonebot-plugin-terralink"
version = "0.5.0"
description = "将 Terraria tModLoader 服务器接入 NoneBot2 机器人生态的双向通信与运维插件"
authors = [
    { name = "newcovid", email = "280310454@qq.com" },
]
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-only"
keywords = ["nonebot2", "terraria", "tmodloader", "game-server", "integration", "websocket"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "nonebot2>=2.3.0",
    "nonebot-adapter-onebot>=2.3.0",
    "websockets>=11.0",
    "pydantic>=2.0.0",
    "nonebot-plugin-htmlrender>=0.4.0"
]

[project.urls]
Homepage = "https://github.com/newcovid/nonebot-plugin-terralink"
Documentation = "https://github.com/newcovid/nonebot-plugin-terralink#readme"
Repository = "https://github.com/newcovid/nonebot-plugin-terralink"
Issues = "https://github.com/newcovid/nonebot-plugin-terralink/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# [修复] 使用 find 指令自动查找子包，防止 core/services/matchers 丢失
[tool.setuptools.packages.find]
where = ["."]
include = ["nonebot_plugin_terralink", "nonebot_plugin_terralink.*"]

# [修复] 显式包含资源文件（模板、CSS 等），防止打包时遗漏
[tool.setuptools.package-data]
nonebot_plugin_terralink = ["resources/**/*.html", "resources/**/*.css"]
